Fix blog background on safari, improve typed slogan

--- a/src/components/Home/Blog/index.css
+++ b/src/components/Home/Blog/index.css
@@ -36,15 +36,15 @@
     background-color: rgba(255,255,255,0.7);
 }
 
-#blog a {
+#blog #blog--svg-container {
     position: absolute;
     overflow: hidden;
     background-color: transparent;
 }
 
 #blog--svg-container {
-    /*position: absolute;*/
-    /*top: -100vh;*/
+    top: 0;
+    left: 0;
     z-index: 0;
 }
 
